phase4_report/envoy_partition.yaml
admin:
  address: {socket_address: {address: 127.0.0.1, port_value: 19902}}
static_resources:
  listeners:
  - name: l
    address: {socket_address: {address: 127.0.0.1, port_value: 10001}}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          route_config:
            name: r
            virtual_hosts:
            - name: v
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: up}
          http_filters:
          - name: envoy.filters.http.set_filter_state
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.set_filter_state.v3.Config
              on_request_headers:
              - object_key: envoy.string
                factory_key: envoy.string
                format_string:
                  text_format_source:
                    inline_string: "%REQ(x-agent-principal)%"
                shared_with_upstream: ONCE
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: up
    connect_timeout: 2s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: up
      endpoints:
      - lb_endpoints:
        - endpoint: {address: {socket_address: {address: 127.0.0.1, port_value: 19002}}}
